Add node API for Swarm
