# generated/Normalizer/NodeResourcesNormalizer.php
@@ -1,0 +1,64 @@
+<?php
+
+namespace Docker\API\Normalizer;
+
+use Joli\Jane\Reference\Reference;
+use Symfony\Component\Serializer\Normalizer\DenormalizerInterface;
+use Symfony\Component\Serializer\Normalizer\NormalizerInterface;
+use Symfony\Component\Serializer\Normalizer\SerializerAwareNormalizer;
+
+class NodeResourcesNormalizer extends SerializerAwareNormalizer implements DenormalizerInterface, NormalizerInterface
+{
+    public function supportsDenormalization($data, $type, $format = null)
+    {
+        if ($type !== 'Docker\\API\\Model\\NodeResources') {
+            return false;
+        }
+
+        return true;
+    }
+
+    public function supportsNormalization($data, $format = null)
+    {
+        if ($data instanceof \Docker\API\Model\NodeResources) {
+            return true;
+        }
+
+        return false;
+    }
+
+    public function denormalize($data, $class, $format = null, array $context = [])
+    {
+        if (empty($data)) {
+            return null;
+        }
+        if (isset($data->{'$ref'})) {
+            return new Reference($data->{'$ref'}, $context['rootSchema'] ?: null);
+        }
+        $object = new \Docker\API\Model\NodeResources();
+        if (!isset($context['rootSchema'])) {
+            $context['rootSchema'] = $object;
+        }
+        if (property_exists($data, 'NanoCPUs')) {
+            $object->setNanoCPUs($data->{'NanoCPUs'});
+        }
+        if (property_exists($data, 'MemoryBytes')) {
+            $object->setMemoryBytes($data->{'MemoryBytes'});
+        }
+
+        return $object;
+    }
+
+    public function normalize($object, $format = null, array $context = [])
+    {
+        $data = new \stdClass();
+        if (null !== $object->getNanoCPUs()) {
+            $data->{'NanoCPUs'} = $object->getNanoCPUs();
+        }
+        if (null !== $object->getMemoryBytes()) {
+            $data->{'MemoryBytes'} = $object->getMemoryBytes();
+        }
+
+        return $data;
+    }
+}
